== FeedTools 0.2.23
 * autodiscovery implemented
 * now knows a title from a hole in the ground
 * feed cache is set to nil by default now
 * both summary and content elements are generated now
 * now supports proxies
 * fixed bug with feed merging referencing a method that was refactored
 * no longer dies if uuidtools gem is missing but the UUID class is defined
 * updated timestamp handling and generation
 * added support for entry sorting on any feed item field
 * added support for disabling entry sorting entirely
 * fixed issue with itunes categories
 * fixed itunes subtitle/summary
 * fixed entry assignment bug
 * fixed issued/published variable name mix-up
 * added support for the payload module
 * added support for xhtml:div elements
 * dc:date now preempts pubDate
 * now correctly strips out wrapper div elements from text constructs
 * fixed issue with some atom links being incorrectly identified as images
 * reorganized some of the helper modules
 * made some portions of url normalization case insensitive
 * fixed issue with filename handling on Windows
== FeedTools 0.2.22
 * fixed another atom generation error
== FeedTools 0.2.21
 * fixed atom generation error
 * added summary element to generated atom xml
 * added warning message for improperly set up database tables
== FeedTools 0.2.20
 * fixed some atom namespace bugs
 * added a summary method to feed items
 * added some support for the apple-wallpapers elements
== FeedTools 0.2.19
 * lousy encoding support (as opposed to none at all)
 * xml processing instruction now correctly prefixes generated feeds
 * attributes are escaped properly when generating feeds
 * uppercase html is no longer sanitized for not being in the whitelist
 * added alias method for assigning to entries
 * changed the xpath querying to be much, much more DRY
 * find_node and find_all_nodes are actually useful now
 * full case-insensitivity implemented for the xpath helper methods