@@ -1,7 +1,7 @@
 -- Example Sqlite schema
   CREATE TABLE feeds (
     id                INTEGER PRIMARY KEY NOT NULL,
-    url               VARCHAR(255) DEFAULT NULL,
+    href              VARCHAR(255) DEFAULT NULL,
     title             VARCHAR(255) DEFAULT NULL,
     link              VARCHAR(255) DEFAULT NULL,
     feed_data         TEXT DEFAULT NULL,
